--- a/thuedo/src/views/logIn.ejs
+++ b/thuedo/src/views/logIn.ejs
@@ -6,14 +6,21 @@
                 <a class="auth-form__switch-btn" href="/user/signup">Đăng ký</a>
             </div>
 
-            <div class="auth-form__form">
+            <form class="auth-form__form">
+                <div alert type>
+                    <% if(typeof message !="undefined" && message) { %>
+                        <strong>
+                            <%= message %>
+                        </strong>
+                        <% } %>
+                </div>
                 <div class="auth-form__group">
                     <input type="text" class="auth-form__input" placeholder="Email">
                 </div>
                 <div class="auth-form__group">
                     <input type="password" class="auth-form__input" placeholder="Mật khẩu">
                 </div>
-            </div>
+            </form>
 
             <div class="auth-form__aside">
                 <div class="auth-form__help">
