--- a/thuedo/src/views/signUp.ejs
+++ b/thuedo/src/views/signUp.ejs
@@ -15,7 +15,7 @@
                         <% } %>
                 </div>
                 <div class=" auth-form__group">
-                    <input type="text" class="auth-form__input" id="email" name="email"
+                    <input type="email" class="auth-form__input" id="email" name="email"
                         placeholder="Email là tên người dùng">
                 </div>
                 <div class="auth-form__group">
