--- a/thuedo/src/views/signUp.ejs
+++ b/thuedo/src/views/signUp.ejs
@@ -2,7 +2,7 @@
     <div class="auth-form">
         <div class="auth-form__container">
             <div class="auth-form__header">
-                <h3 class="auth-form__heading">Đăng ký</h3>
+                <h3 class="auth-form__heading">Tạo tài khoản</h3>
                 <a class="auth-form__switch-btn" href="/user/login">Đăng nhập</a>
             </div>
 
