--- a/thuedo/src/views/logIn.ejs
+++ b/thuedo/src/views/logIn.ejs
@@ -24,7 +24,7 @@
 
                 <div class="auth-form__aside">
                     <div class="auth-form__help">
-                        <a href="" class="auth-form__help-link auth-form__help-forgot">Quên mật khẩu</a>
+                        <a href="/user/forgot" class="auth-form__help-link auth-form__help-forgot">Quên mật khẩu</a>
                         <span class="auth-form__help-separate"></span>
                         <input class="keep-logged-in-checkbox" type="checkbox" id="keepLoggedIn" name="keepLoggedIn">
                         <label for="keepLoggedIn" class="auth-form__help-link auth-form__help-forgot">Duy trì đăng
