--- a/09-implementing-authentication/public/styles/products.css
+++ b/09-implementing-authentication/public/styles/products.css
@@ -10,10 +10,13 @@
     border-radius: var(--border-radius-medium);
     text-align: center;
     background-color: white;
+    overflow: hidden;
 }
 
 .product-item img {
     width: 100%;
+    height: 10rem;
+    object-fit: cover;
 }
 
 .product-item-content {
@@ -31,3 +34,55 @@
     margin-top: var(--space-4);
     justify-content: center;
 }
+
+#product-details header {
+    margin-top: var(--space-8);
+    padding: var(--space-8);
+    background-color: white;
+    gap: var(--space-8);
+}
+  
+#product-details img {
+    width: 100%;
+    height: 6rem;
+    object-fit: cover;
+    border-radius: var(--border-radius-medium);
+    border: 1px solid var(--color-gray-100);
+}
+  
+#product-info {
+text-align: center;
+}
+
+#product-description {
+background-color: var(--color-primary-500-bg);
+padding: var(--space-8);
+white-space: pre-wrap;
+}
+
+.field-wrap {
+    display: flex;
+    justify-content: space-between;
+    justify-content: center;
+}
+
+
+@media (min-width: 48rem) {
+    #product-details header {
+        display: flex;
+    }
+
+    #product-details img {
+        width: 20rem;
+        height: 15rem;
+        /* transform: rotateZ(-10deg); */
+        margin: var(--space-8);
+    }
+
+    #product-info {
+        text-align: left;
+    }
+
+}
+
+
