--- a/09-implementing-authentication/public/styles/base.css
+++ b/09-implementing-authentication/public/styles/base.css
@@ -116,3 +116,11 @@ a {
 .alert p {
   margin: var(--space-2) 0;
 }
+
+.badge {
+  margin-left: var(--space-2);
+  padding: 0.15rem var(--space-4);
+  border-radius: 10rem;
+  background-color: var(--white);
+  color: var(--rentee-color);
+}
