--- a/09-implementing-authentication/views/customer/cart/cart.ejs
+++ b/09-implementing-authentication/views/customer/cart/cart.ejs
@@ -1,4 +1,5 @@
 <%- include('../../shared/includes/head', { pageTitle: 'Your Cart' }) %>
+<link rel="stylesheet" href="/styles/forms.css">
 <link rel="stylesheet" href="/styles/cart.css">
 </head>
 <body>
