--- a/thuedo/src/views/index.ejs
+++ b/thuedo/src/views/index.ejs
@@ -9,24 +9,13 @@
                     </h3>
 
                     <ul class="category-list">
-                        <li class="category-item category-item--active">
-                            <a href="" class="category-item__link">Mẹ và bé</a>
-                        </li>
-                        <li class="category-item">
-                            <a href="" class="category-item__link">Điện tử - Công nghệ</a>
-                        </li>
-                        <li class="category-item">
-                            <a href="" class="category-item__link">Thể thao - Du lịch</a>
-                        </li>
-                        <li class="category-item">
-                            <a href="" class="category-item__link">Sách - Truyện</a>
-                        </li>
-                        <li class="category-item">
-                            <a href="" class="category-item__link">Thời trang - May mặc</a>
-                        </li>
-                        <li class="category-item">
-                            <a href="" class="category-item__link">Sắc đẹp</a>
-                        </li>
+                        <% for(let i=0; i < categories.length; i++) { %>
+                            <li class="category-item category-item--active">
+                                <a href="" class="category-item__link">
+                                    <%= categories[i].name %>
+                                </a>
+                            </li>
+                            <%} %>
                     </ul>
                 </nav>
             </div>
@@ -79,35 +68,13 @@
                                 <h4 class="home-product-item__name">Quần Tây Âu Nam MANDO Ống Côn Công Sở 2 Màu
                                     Đen Be Form Đứng Kiểu Dáng Basic Lịch Lãm Trẻ Trung Hàn Quốc QKN020</h4>
                                 <div class="home-product-item__price">
-                                    <!-- <span class="home-product-item__price-old">209.000đ</span> -->
                                     <span class="home-product-item__price-current">135.000đ</span>
                                 </div>
-                                <!-- <div class="home-product-item__action">
-                                    <span class="home-product-item__like home-product-item__like--liked">
-                                        <i class="home-product-item__like-icon-empty fa-regular fa-heart"></i>
-                                        <i class="home-product-item__like-icon-fill fa-solid fa-heart"></i>
-                                    </span>
-                                    <div class="home-product-item__rating">
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                    </div>
-                                    <span class="home-product-item__sold">Đã bán 31,6k</span>
-                                </div> -->
+
                                 <div class="home-product-item__origin">
                                     <span class="home-product-item__brand">Mando</span>
                                     <span class="home-product-item__origin-name">Hà Nội</span>
                                 </div>
-                                <!-- <div class="home-product-item__favourite">
-                                    <i class="fa-solid fa-check"></i>
-                                    <span>Yêu thích</span>
-                                </div>
-                                <div class="home-product-item__sale-off">
-                                    <div class="home-product-item__sale-off-percent">53%</div>
-                                    <span class="home-product-item__sale-off-label">GIẢM</span>
-                                </div> -->
                             </a>
                         </div>
                         <!-- Product item -->
@@ -122,32 +89,11 @@
                                     <!-- <span class="home-product-item__price-old">380.000đ</span> -->
                                     <span class="home-product-item__price-current">265.000đ</span>
                                 </div>
-                                <!-- <div class="home-product-item__action">
-                                    <span class="home-product-item__like home-product-item__like--liked">
-                                        <i class="home-product-item__like-icon-empty fa-regular fa-heart"></i>
-                                        <i class="home-product-item__like-icon-fill fa-solid fa-heart"></i>
-                                    </span>
-                                    <div class="home-product-item__rating">
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                    </div>
-                                    <span class="home-product-item__sold">Đã bán 2,5k</span>
-                                </div> -->
                                 <div class="home-product-item__origin">
                                     <span class="home-product-item__brand">Mando</span>
                                     <span class="home-product-item__origin-name">Hà Nội</span>
                                 </div>
-                                <!-- <div class="home-product-item__favourite">
-                                    <i class="fa-solid fa-check"></i>
-                                    <span>Yêu thích</span>
-                                </div>
-                                <div class="home-product-item__sale-off">
-                                    <div class="home-product-item__sale-off-percent">30%</div>
-                                    <span class="home-product-item__sale-off-label">GIẢM</span>
-                                </div> -->
+
                             </a>
                         </div>
                         <!-- Product item -->
@@ -159,35 +105,12 @@
                                 <h4 class="home-product-item__name">Áo Sơ Mi Nam Trơn MANDO Cổ Tàu Form Rộng Vải
                                     Đũi Dài Tay Kiểu Dáng Basic Thời Trang Hàn Quốc ACT01</h4>
                                 <div class="home-product-item__price">
-                                    <!-- <span class="home-product-item__price-old">290.000đ</span> -->
                                     <span class="home-product-item__price-current">249.000đ</span>
                                 </div>
-                                <!-- <div class="home-product-item__action">
-                                    <span class="home-product-item__like home-product-item__like--liked">
-                                        <i class="home-product-item__like-icon-empty fa-regular fa-heart"></i>
-                                        <i class="home-product-item__like-icon-fill fa-solid fa-heart"></i>
-                                    </span>
-                                    <div class="home-product-item__rating">
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                    </div>
-                                    <span class="home-product-item__sold">Đã bán 6k</span>
-                                </div> -->
                                 <div class="home-product-item__origin">
                                     <span class="home-product-item__brand">Mando</span>
                                     <span class="home-product-item__origin-name">Hà Nội</span>
                                 </div>
-                                <!-- <div class="home-product-item__favourite">
-                                    <i class="fa-solid fa-check"></i>
-                                    <span>Yêu thích</span>
-                                </div>
-                                <div class="home-product-item__sale-off">
-                                    <div class="home-product-item__sale-off-percent">22%</div>
-                                    <span class="home-product-item__sale-off-label">GIẢM</span>
-                                </div> -->
                             </a>
                         </div>
                         <!-- Product item -->
@@ -202,32 +125,10 @@
                                     <!-- <span class="home-product-item__price-old">350.000đ</span> -->
                                     <span class="home-product-item__price-current">239.000đ</span>
                                 </div>
-                                <!-- <div class="home-product-item__action">
-                                    <span class="home-product-item__like home-product-item__like--liked">
-                                        <i class="home-product-item__like-icon-empty fa-regular fa-heart"></i>
-                                        <i class="home-product-item__like-icon-fill fa-solid fa-heart"></i>
-                                    </span>
-                                    <div class="home-product-item__rating">
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                        <i class="home-product-item__star--gold fa-solid fa-star"></i>
-                                    </div>
-                                    <span class="home-product-item__sold">Đã bán 2,3k</span>
-                                </div> -->
                                 <div class="home-product-item__origin">
                                     <span class="home-product-item__brand">Mando</span>
                                     <span class="home-product-item__origin-name">Hà Nội</span>
                                 </div>
-                                <!-- <div class="home-product-item__favourite">
-                                    <i class="fa-solid fa-check"></i>
-                                    <span>Yêu thích</span>
-                                </div>
-                                <div class="home-product-item__sale-off">
-                                    <div class="home-product-item__sale-off-percent">32%</div>
-                                    <span class="home-product-item__sale-off-label">GIẢM</span>
-                                </div> -->
                             </a>
                         </div>
                         <!-- Product item -->
