--- a/src/views/reset.ejs
+++ b/src/views/reset.ejs
@@ -18,20 +18,21 @@
                                     <%=message%>
                                 </strong>
                                 <%}%>
+                                    <div class="auth-form__group">
+                                        <input type="password" class="auth-form__input" id="password" name="password"
+                                            placeholder="Mật khẩu">
+                                    </div>
+                                    <div class="auth-form__group">
+                                        <input type="password" class="auth-form__input" id="confirmedPassword"
+                                            name="confirmedPassword" placeholder="Nhập lại mật khẩu">
+                                    </div>
+                                    <input type="hidden" name="email" id="email" value="<%=email %>">
+                                    <div class="auth-form__controls">
+                                        <button class="btn btn--primary" type="submit">Gửi</button>
+                                    </div>
                                     <%}%>
                 </div>
-                <div class="auth-form__group">
-                    <input type="password" class="auth-form__input" id="password" name="password"
-                        placeholder="Mật khẩu">
-                </div>
-                <div class="auth-form__group">
-                    <input type="password" class="auth-form__input" id="confirmedPassword" name="confirmedPassword"
-                        placeholder="Nhập lại mật khẩu">
-                </div>
-                <input type="hidden" name="email" id="email" value="<%=email %>">
-                <div class="auth-form__controls">
-                    <button class="btn btn--primary" type="submit">Gửi</button>
-                </div>
+
             </form>
         </div>
 
