--- a/src/views/category.ejs
+++ b/src/views/category.ejs
@@ -70,7 +70,7 @@
                                 </a>
                             </div>
                             <%}%>
-                                <ul class="pagination home-product__pagination">
+                                <!-- <ul class="pagination home-product__pagination">
                                     <li class="pagination-item">
                                         <a href="" class="pagination-item__link">
                                             <i class="pagination-item_-icon fa-solid fa-angle-left"></i>
@@ -103,7 +103,7 @@
                                             <i class="pagination-item_-icon fa-solid fa-angle-right"></i>
                                         </a>
                                     </li>
-                                </ul>
+                                </ul> -->
                     </div>
                 </div>
             </div>
