--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -375,7 +375,7 @@
                     </div>
                 </div>
 
-                <ul class="pagination home-product__pagination">
+                <!-- <ul class="pagination home-product__pagination">
                     <li class="pagination-item">
                         <a href="" class="pagination-item__link">
                             <i class="pagination-item_-icon fa-solid fa-angle-left"></i>
@@ -408,7 +408,7 @@
                             <i class="pagination-item_-icon fa-solid fa-angle-right"></i>
                         </a>
                     </li>
-                </ul>
+                </ul> -->
             </div>
         </div>
     </div>
