product uploading is now available

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -96,7 +96,7 @@
                                 <a href="">Thông tin cá nhân</a>
                             </li>
                             <li class="header__navbar-user-item">
-                                <a href="/add-product">Đăng sản phẩm</a>
+                                <a href="/products/add-product">Đăng sản phẩm</a>
                             </li>
                             <li class="header__navbar-user-item header__navbar-user-item--separate">
                                 <a href="/">Đăng xuất</a>
