--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -98,7 +98,7 @@
                                 <a href="/user/information">Thông tin cá nhân</a>
                             </li>
                             <li class="header__navbar-user-item">
-                                <a href="/add-product">Đăng sản phẩm</a>
+                                <a href="/user/add-product">Đăng sản phẩm</a>
                             </li>
                             <li class="header__navbar-user-item header__navbar-user-item--separate">
                                 <a href="/user/logout">Đăng xuất</a>
@@ -183,7 +183,7 @@
                     </ul> -->
                 <!-- </div> -->
                 
-                    <button class="header__search-btn" type="submit" >Search
+                    <button class="header__search-btn" type="submit" >
                         <i class="header__search-btn-icon fa-solid fa-magnifying-glass"></i>
                     </button>
         </form>
