--- a/src/views/category.ejs
+++ b/src/views/category.ejs
@@ -57,6 +57,7 @@
                                 <a href="/products/<%= products[i].dataValues.productId %>" class="home-product-item">
                                     <div class="home-product-item__img"
                                         style="background-image:url(<%= products[i].imagePath %>) ">
+                                        <!-- <img src="<%=products[i].imagePath %> "> -->
                                     </div>
                                     <h4 class="home-product-item__name">
                                         <%=products[i].name %>
