--- a/src/views/product-detail.ejs
+++ b/src/views/product-detail.ejs
@@ -27,25 +27,27 @@
         <h2 class="product-price">
           <%= product.price %> VND
         </h2>
-        <section class="selection-date">
-          <p>Chọn ngày bạn muốn thuê</p>
-          <div class="field-wrap">
-            <div>
-              <label for="start">Start:</label>
-              <input type="date" id="start-date" name="start-date" required>
+        <form method="post">
+          <section class="selection-date">
+            <p>Chọn ngày bạn muốn thuê</p>
+            <div class="field-wrap">
+              <div>
+                <label for="start">Start:</label>
+                <input type="date" id="start-date" name="start-date" required>
+              </div>
+              <div>
+                <label for="end">End:</label>
+                <input type="date" id="end-date" name="end-date" required>
+              </div>
             </div>
-            <div>
-              <label for="end">End:</label>
-              <input type="date" id="end-date" name="end-date" required>
-            </div>
-          </div>
-        </section>
-        <p>
-          <label for="quantity">Số lượng</label>
-          <input type="number" id="quantity" name="quantity" value="0" min="1" step="1" required>
-        </p>
-        <a class="btn" href="/products/checkout/<%= product.productId %>">Thuê</a>
-        <button class="btn">Add to Saved</button>
+          </section>
+          <p>
+            <label for="quantity">Số lượng</label>
+            <input type="number" id="quantity" name="quantity" value="0" min="1" step="1" required>
+          </p>
+          <button class="btn" type="submit">Thuê</button>
+          <button class="btn">Add to Saved</button>
+        </form>
       </div>
     </header>
     <div id="product-description">
