--- a/src/views/orders-manager.ejs
+++ b/src/views/orders-manager.ejs
@@ -32,7 +32,7 @@
                 <p>Số lượng: <%= orders[i].Orders[0].quantity %> </p>
                 <p>Email: <%= orders[i].Orders[0].User.email %> </p>
               </div>
-              <p class="total">Thành tiền: <%= orders[i].price %> </p>
+              <p class="total">Thành tiền: <%= orders[i].Orders[0].totalPrice %> </p>
           </div>
           
         </a>
