--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -95,7 +95,7 @@
 
                         <ul class="header__navbar-user-menu">
                             <li class="header__navbar-user-item">
-                                <a href="/user/information">Thông tin cá nhân</a>
+                                <a href="/">Thông tin cá nhân</a>
                             </li>
                             <li class="header__navbar-user-item">
                                 <a href="/user/add-product">Đăng sản phẩm</a>
@@ -104,11 +104,12 @@
                                 <a href="/user/manage-rental-products">Quản lý sản phẩm đang thuê</a>
                             </li>
                             <li class="header__navbar-user-item header__navbar-user-item--separate">
-                                <a href="/user/logout">Đăng xuất</a>
-                            </li>
-                            <li class="header__navbar-user-item header__navbar-user-item--separate">
                                 <a href="/user/orders-manager">Sản phẩm đang cho thuê</a>
                             </li>
+                            <li class="header__navbar-user-item header__navbar-user-item--separate">
+                                <a href="/user/logout">Đăng xuất</a>
+                            </li>
+
                         </ul>
                     </li>
                     <%} else { %>
