--- a/src/views/manage-rental-products.ejs
+++ b/src/views/manage-rental-products.ejs
@@ -21,31 +21,32 @@
 <body>
     <main>
         <h1>Quản lý sản phẩm đang thuê</h1>
-        <ul id="cart-items">
-            <!-- <% for(let i = 0; i< rentingProducts.length; i++){ %> -->
-            <li>
-                <a class="cart-item" href="/products/<%= rentingProducts[i].dataValues.productId %>">
-                    <img src="<%= rentingProducts[i].dataValues.Product.imagePath %>"
-                        alt="<%= rentingProducts[i].dataValues.Product.name %>">
-                    <div class="cart-info">
-                        <div class="cart-item-info">
-                            <h2>
-                                <%= rentingProducts[i].dataValues.Product.name%>
-                            </h2>
-                            <p>Số lượng: <%= rentingProducts[i].quantity %>
-                            </p>
-                        </div>
-                        <p class="total">Thành tiền: <%= rentingProducts[i].dataValues.totalPrice %> VND</p>
-                    </div>
 
-                    <!-- </article>
+        <ul id="cart-items">
+            <% for(let i=0; i< rentingProducts.length; i++){ %>
+                <li>
+                    <a class="cart-item" href="/products/<%= rentingProducts[i].dataValues.productId %>">
+                        <img src="<%= rentingProducts[i].dataValues.Product.imagePath %>"
+                            alt="<%= rentingProducts[i].dataValues.Product.name %>">
+                        <div class="cart-info">
+                            <div class="cart-item-info">
+                                <h2>
+                                    <%= rentingProducts[i].dataValues.Product.name%>
+                                </h2>
+                                <p>Số lượng: <%= rentingProducts[i].quantity %>
+                                </p>
+                            </div>
+                            <p class="total">Thành tiền: <%= rentingProducts[i].dataValues.totalPrice %> VND</p>
+                        </div>
+
+                        <!-- </article>
                 
                     <button class="btn" id="trash">
                         <i class="fa fa-trash"></i>
                     </button>-->
-                </a>
-            </li>
-            <!-- <% } %> -->
+                    </a>
+                </li>
+                <% } %>
         </ul>
     </main>
 </body>
